<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_body_fat">

    <fragment
        android:id="@+id/navigation_body_fat"
        android:name="com.example.fitnesscalculator.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calorie_calc"
        android:name="com.example.fitnesscalculator.ui.dashboard.DashboardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fitnesscalculator.ui.notifications.NotificationsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.fitnesscalculator.ui.SettingsFragment"
        android:label="@string/settings"/>


</navigation>
